add template admin

--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -185,6 +185,40 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\assets_adminLabs\css\bootstrap.min.css" />
+    <Content Include="Content\assets_adminLabs\css\paper-dashboard.css" />
+    <Content Include="Content\assets_adminLabs\css\paper-dashboard.min.css" />
+    <Content Include="Content\assets_adminLabs\demo\demo.css" />
+    <Content Include="Content\assets_adminLabs\demo\demo.js" />
+    <Content Include="Content\assets_adminLabs\img\apple-icon.png" />
+    <Content Include="Content\assets_adminLabs\img\bg5.jpg" />
+    <Content Include="Content\assets_adminLabs\img\damir-bosnjak.jpg" />
+    <Content Include="Content\assets_adminLabs\img\default-avatar.png" />
+    <Content Include="Content\assets_adminLabs\img\faces\ayo-ogunseinde-1.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\ayo-ogunseinde-2.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\clem-onojeghuo-1.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\clem-onojeghuo-2.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\clem-onojeghuo-3.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\clem-onojeghuo-4.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\erik-lucatero-1.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\erik-lucatero-2.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\joe-gardner-1.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\joe-gardner-2.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\kaci-baum-1.jpg" />
+    <Content Include="Content\assets_adminLabs\img\faces\kaci-baum-2.jpg" />
+    <Content Include="Content\assets_adminLabs\img\favicon.png" />
+    <Content Include="Content\assets_adminLabs\img\header.jpg" />
+    <Content Include="Content\assets_adminLabs\img\jan-sendereks.jpg" />
+    <Content Include="Content\assets_adminLabs\img\logo-small.png" />
+    <Content Include="Content\assets_adminLabs\img\mike.jpg" />
+    <Content Include="Content\assets_adminLabs\js\core\bootstrap.min.js" />
+    <Content Include="Content\assets_adminLabs\js\core\jquery.min.js" />
+    <Content Include="Content\assets_adminLabs\js\core\popper.min.js" />
+    <Content Include="Content\assets_adminLabs\js\paper-dashboard.js" />
+    <Content Include="Content\assets_adminLabs\js\paper-dashboard.min.js" />
+    <Content Include="Content\assets_adminLabs\js\plugins\bootstrap-notify.js" />
+    <Content Include="Content\assets_adminLabs\js\plugins\chartjs.min.js" />
+    <Content Include="Content\assets_adminLabs\js\plugins\perfect-scrollbar.jquery.min.js" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -195,6 +229,48 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\assets_adminLabs\css\bootstrap.min.css.map" />
+    <Content Include="Content\assets_adminLabs\css\paper-dashboard.css.map" />
+    <Content Include="Content\assets_adminLabs\fonts\nucleo-icons.eot" />
+    <Content Include="Content\assets_adminLabs\fonts\nucleo-icons.ttf" />
+    <Content Include="Content\assets_adminLabs\fonts\nucleo-icons.woff" />
+    <Content Include="Content\assets_adminLabs\fonts\nucleo-icons.woff2" />
+    <Content Include="Content\assets_adminLabs\js\paper-dashboard.js.map" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\cards\_card-chart.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\cards\_card-map.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\cards\_card-plain.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\cards\_card-stats.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\cards\_card-user.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_buttons.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_cards.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_dropdown.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_inputs.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_page-header.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_transparency.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\mixins\_vendor-prefixes.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\plugins\_plugin-animate-bootstrap-notify.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\plugins\_plugin-perfect-scrollbar.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_alerts.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_animated-buttons.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_buttons.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_cards.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_checkboxes-radio.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_dropdown.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_fixed-plugin.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_footers.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_images.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_inputs.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_misc.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_mixins.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_navbar.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_nucleo-outline.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_page-header.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_responsive.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_sidebar-and-main-panel.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_tables.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_typography.scss" />
+    <Content Include="Content\assets_adminLabs\scss\paper-dashboard\_variables.scss" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -227,6 +303,7 @@
     <Content Include="Views\Labs\Index.cshtml" />
     <Content Include="Views\Labs\ViewSuccess.cshtml" />
     <Content Include="Views\Labs\ViewError.cshtml" />
+    <Content Include="Views\Shared\_LayoutLabs.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
