--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -194,9 +194,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202206191657599_FirstTime.cs" />
-    <Compile Include="Migrations\202206191657599_FirstTime.Designer.cs">
-      <DependentUpon>202206191657599_FirstTime.cs</DependentUpon>
+    <Compile Include="Migrations\202206201641546_Context.cs" />
+    <Compile Include="Migrations\202206201641546_Context.Designer.cs">
+      <DependentUpon>202206201641546_Context.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -2211,8 +2211,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202206191657599_FirstTime.resx">
-      <DependentUpon>202206191657599_FirstTime.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202206201641546_Context.resx">
+      <DependentUpon>202206201641546_Context.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
