bach update login, register, seed

--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -195,9 +195,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202206231524527_Context.cs" />
-    <Compile Include="Migrations\202206231524527_Context.Designer.cs">
-      <DependentUpon>202206231524527_Context.cs</DependentUpon>
+    <Compile Include="Migrations\202206240137545_Context.cs" />
+    <Compile Include="Migrations\202206240137545_Context.Designer.cs">
+      <DependentUpon>202206240137545_Context.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -212,6 +212,7 @@
     <Compile Include="Models\ViewModel\AccountEditViewModel.cs" />
     <Compile Include="Models\ViewModel\AccountViewModel.cs" />
     <Compile Include="Models\ViewModel\ComplaintViewModel.cs" />
+    <Compile Include="Models\ViewModel\LoginViewModel.cs" />
     <Compile Include="Models\ViewModel\RegisterViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -2203,7 +2204,6 @@
     <Content Include="Views\Complaint\Index.cshtml" />
     <Content Include="Views\Complaint\ComplaintWaiting.cshtml" />
     <Content Include="Views\Account\Delete.cshtml" />
-    <Content Include="Views\Account\IndexAdmin.cshtml" />
     <Content Include="Views\Equipment\Index.cshtml" />
     <Content Include="Views\Equipment\Create.cshtml" />
     <Content Include="Views\Equipment\Details.cshtml" />
@@ -2214,6 +2214,8 @@
     <Content Include="Views\Document\Create.cshtml" />
     <Content Include="Views\Document\Edit.cshtml" />
     <Content Include="Views\Document\Delete.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2232,8 +2234,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202206231524527_Context.resx">
-      <DependentUpon>202206231524527_Context.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202206240137545_Context.resx">
+      <DependentUpon>202206240137545_Context.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
