--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\EquipmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LabsController.cs" />
+    <Compile Include="Controllers\ScheduleController.cs" />
     <Compile Include="Data\LabSem3Context.cs" />
     <Compile Include="Enum\AccountStatusEnum.cs" />
     <Compile Include="Enum\ComplaintStatusEnum.cs" />
@@ -195,9 +196,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202206231524527_Context.cs" />
-    <Compile Include="Migrations\202206231524527_Context.Designer.cs">
-      <DependentUpon>202206231524527_Context.cs</DependentUpon>
+    <Compile Include="Migrations\202206231647014_dbcontext.cs" />
+    <Compile Include="Migrations\202206231647014_dbcontext.Designer.cs">
+      <DependentUpon>202206231647014_dbcontext.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -2214,6 +2215,7 @@
     <Content Include="Views\Document\Create.cshtml" />
     <Content Include="Views\Document\Edit.cshtml" />
     <Content Include="Views\Document\Delete.cshtml" />
+    <Content Include="Views\Schedule\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2232,8 +2234,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202206231524527_Context.resx">
-      <DependentUpon>202206231524527_Context.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202206231647014_dbcontext.resx">
+      <DependentUpon>202206231647014_dbcontext.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
