bach update database

--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -197,9 +197,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202206251646136_initDb.cs" />
-    <Compile Include="Migrations\202206251646136_initDb.Designer.cs">
-      <DependentUpon>202206251646136_initDb.cs</DependentUpon>
+    <Compile Include="Migrations\202206261608298_Context.cs" />
+    <Compile Include="Migrations\202206261608298_Context.Designer.cs">
+      <DependentUpon>202206261608298_Context.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -2244,8 +2244,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202206251646136_initDb.resx">
-      <DependentUpon>202206251646136_initDb.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202206261608298_Context.resx">
+      <DependentUpon>202206261608298_Context.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
