--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -365,9 +365,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202207051437518_Context.cs" />
-    <Compile Include="Migrations\202207051437518_Context.Designer.cs">
-      <DependentUpon>202207051437518_Context.cs</DependentUpon>
+    <Compile Include="Migrations\202207061257440_dbcontext.cs" />
+    <Compile Include="Migrations\202207061257440_dbcontext.Designer.cs">
+      <DependentUpon>202207061257440_dbcontext.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -2427,8 +2427,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202207051437518_Context.resx">
-      <DependentUpon>202207051437518_Context.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202207061257440_dbcontext.resx">
+      <DependentUpon>202207061257440_dbcontext.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
