--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -365,9 +365,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202207051437518_Context.cs" />
-    <Compile Include="Migrations\202207051437518_Context.Designer.cs">
-      <DependentUpon>202207051437518_Context.cs</DependentUpon>
+    <Compile Include="Migrations\202207061146440_Context.cs" />
+    <Compile Include="Migrations\202207061146440_Context.Designer.cs">
+      <DependentUpon>202207061146440_Context.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Account.cs" />
@@ -2351,6 +2351,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="TemplateMail\AssignComplaintMail.html" />
     <Content Include="TemplateMail\CreateComplaintMail.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -2409,6 +2410,7 @@
     <Content Include="Views\Account\Profile.cshtml" />
     <Content Include="Views\Account\ChangePassword.cshtml" />
     <Content Include="Views\Account\ChangeProfile.cshtml" />
+    <Content Include="Views\Complaint\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -2427,8 +2429,8 @@
     <Content Include="Scripts\jquery-3.4.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202207051437518_Context.resx">
-      <DependentUpon>202207051437518_Context.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202207061146440_Context.resx">
+      <DependentUpon>202207061146440_Context.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
