--- a/LabSem3/LabSem3.csproj
+++ b/LabSem3/LabSem3.csproj
@@ -2354,6 +2354,8 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="TemplateMail\AssignComplaintMail.html" />
     <Content Include="TemplateMail\CreateComplaintMail.html" />
+    <Content Include="TemplateMail\HaveAssignComplaintMail.html" />
+    <Content Include="TemplateMail\ProcessComplaintMail.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
