--- a/LabSem3/Web.config
+++ b/LabSem3/Web.config
@@ -20,8 +20,8 @@
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <connectionStrings>
-    <!--<add name="LabSem3DB" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LabSem3DB.mdf;Initial Catalog=LabSem3DB;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="LabSem3DB" connectionString="Server=tcp:labsem3dbserver.database.windows.net,1433;Initial Catalog=LabSem3_db;Persist Security Info=False;User ID=sqladmin;Password=Bach@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    <add name="LabSem3DB" connectionString="Data Source=(localdb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LabSem3DB.mdf;Initial Catalog=LabSem3DB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="LabSem3DB" connectionString="Server=tcp:labsem3dbserver.database.windows.net,1433;Initial Catalog=LabSem3_db;Persist Security Info=False;User ID=sqladmin;Password=Bach@123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
